--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "devDependencies": {
         "@types/react": "^19.1.2",
         "@types/react-dom": "^19.1.2",
+        "@types/react-router-dom": "^5.3.3",
         "@vitejs/plugin-react": "^4.4.0",
         "axios": "^1.8.2",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.2.0",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
+        "react-router-dom": "^7.5.1",
         "sass": "^1.86.3",
         "typescript": "^5.8.3",
         "vite": "^6.2.4"
