[ref#010] Update: Introduce and apply TanStack Query to improve data acquisition using Laravel API

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "dev": "vite"
     },
     "devDependencies": {
+        "@tanstack/react-query": "^5.74.4",
         "@types/react": "^19.1.2",
         "@types/react-dom": "^19.1.2",
         "@types/react-router-dom": "^5.3.3",
