--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
         "react-router-dom": "^7.5.1",
+        "react-toastify": "^11.0.5",
         "sass": "^1.86.3",
         "typescript": "^5.8.3",
         "vite": "^6.2.4"
