--- a/.env.example
+++ b/.env.example
@@ -4,9 +4,9 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
-APP_LOCALE=en
+APP_LOCALE=ja
 APP_FALLBACK_LOCALE=en
-APP_FAKER_LOCALE=en_US
+APP_FAKER_LOCALE=ja_JP
 
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
@@ -23,7 +23,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=sqlite
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
-# DB_DATABASE=laravel
+DB_DATABASE=database.sqlite
 # DB_USERNAME=root
 # DB_PASSWORD=
 
